...
    "launches.navigation.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Launches"
          }
        }
      }
    },
    "launches.no_results.description": {
      "extractionState": "manual",
...
    "news.navigation.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "News"
          }
        }
      }
    },
    "news.no_results.description": {
      "extractionState": "manual",
...
